--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Deploy
 on: [push]
 jobs:
-  build-and-deploy:
+  gh-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
